# ecom/main.go
@@ -8,7 +8,9 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/shahincsejnu/gocom/ecom/presenter/healthcheck"
+	"github.com/shahincsejnu/gocom/ecom/presenter/product"
 	"github.com/shahincsejnu/gocom/ecom/presenter/users"
+	productuc "github.com/shahincsejnu/gocom/ecom/usecase/product"
 	useruc "github.com/shahincsejnu/gocom/ecom/usecase/users"
 )
 
@@ -39,9 +41,11 @@ func newServer() (*http.Server, error) {
 
 	err = c.Invoke(func(
 		userUC *useruc.Usecase,
+		productUC *productuc.Usecase,
 	) {
 		r.GET("/", healthcheck.Handler())
 		r.GET("/users/:userID", users.GetOneHandler(userUC))
+		r.GET("/products", product.GetListHandler(productUC))
 	})
 	if err != nil {
 		return nil, err
